tests/invalid/runtime/io_utf8_invalid.pts
import Io;
import Fs;

function main() : void {
    string path = Io.tempPath();
    BinaryFile f = Io.openBinary(path, "w");
    list<byte> data = [0xC3.toByte(), 0x28.toByte()];
    f.write(data);
    f.close();

    TextFile r = Io.openText(path, "r");
    try {
        r.read(1);
    } finally {
        r.close();
        if (Fs.exists(path)) Fs.rm(path);
    }
}
